--- a/docs/040.mysql45/0010.基础部分/0020.02-日志系统.md
+++ b/docs/040.mysql45/0010.基础部分/0020.02-日志系统.md
@@ -46,7 +46,7 @@ redo log可以抽象成当客栈老板的大脑，他会记住当前消费的客
 
 我觉得这应该还是和他们两的来源和具体功能来谈：
 - binlog是Server级别，也就是Mysql提供的，而redo log是Innodb存储引擎级别。他们本身就不在一个层面。
-- binlog从前面也得知是循环写的，所以它完成不了整个数据库的备份，这个职责就是binlog在担当。
+- redo从前面也得知是循环写的，所以它完成不了整个数据库的备份，这个职责就是binlog在担当。
 - 同时，redo log最重要的能力就是crash-safe，也可以说是保障持久性。这是binlog不具备的能力。
 
 换句话说，redo log作为客栈老板的“脑子”是用来做crash-safe的，binlog存储了全部的资源，是用来做数据备份的。
