--- a/docs/050.projects/0010.game-world/00020.day2-用户的权限管理系统.md
+++ b/docs/050.projects/0010.game-world/00020.day2-用户的权限管理系统.md
@@ -330,7 +330,7 @@ public interface IUserService {
 ## 总结
 今天是为了实现登录的内容，后续增删改查的部分还需要补充一下，不过就是按部就班填一填罢了。
 
-下一步的设计思路，把注册中心、网关、OSS存储系统的服务给拉起来。
+下一步的设计思路，设计AI的CRUD。
 
 
 
