--- a/docs/050.projects/0010.game-world/00061.day6.5-Netty详解（1）.md
+++ b/docs/050.projects/0010.game-world/00061.day6.5-Netty详解（1）.md
@@ -119,19 +119,12 @@ public class NettyServerHandler extends ChannelInboundHandlerAdapter {
 Java中最早采用的是BIO，也叫作同步阻塞IO。JVM1.4之后引进了新版本Java New IO类库，变成了NIO，但是这个NIO并不是我们常规意义下的非阻塞IO，它用IO多路复用来形容比较贴切。
 与此同时BIO也被称之为OIO（OLD IO）。与这些同步的IO不同的还有另一种IO叫异步IO。
 
+但是这样的OIO有着很大的问题，比如有一大批连接过来，你就需要有一大批线程去处理这些连接，否则你就会一直阻塞在获取连接和处理连接的过程中。
+就算你是用到了线程池，但是线程池注定是有限的，当所有的线程都被占满然后都还在阻塞等待数据的时候，新的连接也照样无法处理。
+
 ### NIO
 那我们Java，Netty如今选用的NIO，它的核心就在于selector，选择器，与非阻塞IO不同的是，有选择器的介入后，一个线程就可以对接多条IO通道，当有一方数据准备好时便获取。具体方式不再是
 同步非阻塞IO一样的一直轮询自己是否可以进行IO。
-
-### Java NIO的三大利器
-Java NIO与之前的OIO最大的不同也是来自于下面这三者
-#### Channel
-Java OIO的读写是基于流或者字节的，就区分为writebuffer和readbuffer，那channel就相当于两者的结合体，既可以写出也可以读进。
-#### Selector
-Selector是实现IO多路复用的核心，它是IO事件的查询器，通过Selector，我们能知道当前哪个注入到Selector当中的IO已经准备就绪，那就对这个IO进行读写。
-它的好处就是，我们不用像BIO一样，如果有多个IO就要用多个线程去监控，这种方式可以让一个线程就可以负责到所有注册到Selector当中的IO。从而减小了系统开销。
-#### Buffer
-Buffer也是一门利器，从channel中读数据是读进buffer，要写出也是从buffer中写入channel。有buffer的存在，我们就不用一个个的按字节或者流去读取，而是想读哪读哪，想写哪里写哪里，哪里不会点哪里。
 
 ## 总结
 好了，现在介绍到了IO以及Java中的IO，后续我们就要基于这些去继续将Netty分解出来。
