--- a/docs/050.projects/0010.game-world/00074.day10-匹配池逻辑.md
+++ b/docs/050.projects/0010.game-world/00074.day10-匹配池逻辑.md
@@ -96,7 +96,7 @@ public interface IMatchingPool {
                         logger.info("玩家A：{}， 玩家B：{} 匹配成功", a.getUserId(), b.getUserId());
                         playerA = a;
                         playerB = b;
-                        //sendResult(a, b);
+                        sendResult(a, b);
                         break;
                     }
                 }
