--- a/docs/060.configs/0011.minio.md
+++ b/docs/060.configs/0011.minio.md
@@ -1,1 +1,14 @@
-# 配置minio环境
+# MINIO
+
+## 拉取镜像
+``` shell
+docker pull minio/minio:RELEASE.2020-10-28T08-16-50Z-37-ged264449b
+```
+## RUN服务
+```
+docker run --name minio -p 9090:9000 -p 9999:9999 -d --restart=always -e "MINIO_ROOT_USER=minioadmin" -e "MINIO_ROOT_PASSWORD=minioadmin123?" -v F://middleware/MINIO/data:/data -v F://middleware/MINIO/config:/root/.minio minio/minio server /data --console-address '0.0.0.0:9999'
+```
+## 登录
+登录以后就呈现如下
+![](https://img2022.cnblogs.com/blog/3001115/202211/3001115-20221120184313509-810637149.png)
+
