--- a/docs/013.datastructure/0010.数组/00010.二分查找/00011.34. 在排序数组中查找元素的第一个和最后一个位置.md
+++ b/docs/013.datastructure/0010.数组/00010.二分查找/00011.34. 在排序数组中查找元素的第一个和最后一个位置.md
@@ -1,3 +1,39 @@
 # 34. 在排序数组中查找元素的第一个和最后一个位置
 
 > 一道题解决二分
+
+```java
+class Solution {
+    public int[] searchRange(int[] nums, int target) {
+        // 这时候就要利用两种不同的二分法去找答案
+        // 1. 第一种，往最右边去找
+        int[] res = new int[]{-1, -1};
+        if (nums.length == 0) {
+            return res;
+        }
+        int l = 0, r = nums.length - 1;
+        while (l < r) {
+            int mid = (l + r + 1) >> 1;
+            if (nums[mid] <= target) {
+                l = mid;
+            } else {
+                r = mid - 1;
+            }
+        }
+        res[1] = nums[l] == target ? l : -1;
+        // 1. 第二种，往最左边去找
+        l = 0;
+        r = nums.length - 1;
+        while (l < r) {
+            int mid = (l + r) >> 1;
+            if (nums[mid] >= target) {
+                r = mid;
+            } else {
+                l = mid + 1;
+            }
+        }
+        res[0] = nums[l] == target ? l : -1;
+        return res;
+    }
+}
+```
