--- a/docs/040.mysql45/0020.实战部分/00017.16-索引失效.md
+++ b/docs/040.mysql45/0020.实战部分/00017.16-索引失效.md
@@ -14,11 +14,11 @@
 
 ### 失败案例s
 如下图所示, 当有此情况的时候，前面的列会被认定为数字
-![image](./%E7%B1%BB%E5%9E%8B%E8%BD%AC%E5%8C%96sql.png)
+![image](./16-1.png)
 
 
 但是，如果是这样的情况，则是后面的值会转化为数字，不会导致索引失效。
-![image](./%E7%B1%BB%E5%9E%8B%E8%BD%AC%E5%8C%96%E5%A4%B1%E8%B4%A5%E6%A1%88%E4%BE%8B.png)
+![image](./16-2.png)
 
 在string和int对比的时候，会倾向把string转int。
 
