--- a/docs/040.mysql45/0010.基础部分/0070.07-行锁之谜.md
+++ b/docs/040.mysql45/0010.基础部分/0070.07-行锁之谜.md
@@ -45,7 +45,7 @@ Innodb下的行锁有这么几种：
 ```mysql
 select key2 from t where key2 = 1;
 ```
-那么完蛋，你要进行一个事情叫做全表扫描了，此时给你用的不再是行锁，而是表锁。其实这换句话说就是你没办法知道会给多少行上锁，那么只好给全部的行都上锁了。
+那么完蛋，你要进行一个事情叫做全表扫描了，此时给你用的不再是简简单单的锁一条记录。其实这换句话说就是你没办法知道会给多少行上锁，那么只好给全部的行都上锁了。
 
 同理，当你索引失效要进行全表扫描的时候，自然上的是表锁。行锁失效某种意义下可以理解为索引失效。
 
