--- a/docs/022.jvm/0013.垃圾回收/00017.根节点枚举.md
+++ b/docs/022.jvm/0013.垃圾回收/00017.根节点枚举.md
@@ -1,6 +1,6 @@
 # 根节点枚举
 
-根节点枚举会触发“stop the world”的，因为如果不触发的话，势必导致枚举的不准确。
+根节点枚举(找到所有的根节点)会触发“stop the world”的，因为如果不触发的话，势必导致GC ROOTS枚举的不准确。
 （这里与之前的标记整理算法不同，标记整理算法是在整理的时候由于要涉及到全部的对象，所以要触发“stop the world”）
 
 ## OopMap
