--- a/docs/011.network/0010.网络杂谈/00011.TCP-沾包.md
+++ b/docs/011.network/0010.网络杂谈/00011.TCP-沾包.md
@@ -13,6 +13,7 @@
 ### MTU：Maximum Transmit Unit
 在网络层传输的数据包的最大大小。
 
+一次传输可能会有多个MTU，由于每个网卡可能处理消息的能力不同，所以MTU的值也不同。
 ## 数据切片引起的沾包
 由于网络中的传输时，在TCP接收端把收到的消息拼在了一起，并不知道他们到底是一次消息中的还是多次消息中的，所以很容易发生沾包，深刻原因还要说到这几点：
 
@@ -50,3 +51,7 @@ Tag、Length、Value。把你的消息分为这三部分封装起来。
 
 ### UDP的长度信息的作用
 这就要关于Socket Buffer，它也是有buffer存在的，所以有长度的话同样是为了标识哪里才是一个完整的数据报。
+
+## 既然IP会分片，为什么TCP要分段
+
+原因很简单，假设说TCP不分段和UDP一样，由于TCP不同于UDP是面向连接的可靠的传输协议，他是会保证送达的，所以如果它重传的话就会将整个一大串的数据全部重传，如果分段了只会传丢掉的一小部分了。
