--- a/docs/022.jvm/0012.运行时数据区/00012.对象的创建.md
+++ b/docs/022.jvm/0012.运行时数据区/00012.对象的创建.md
@@ -8,6 +8,11 @@
 
 一个对象的占用内存，在类加载完成后就可以确定了。
 
+为对象分配内存，如果Eden区是足够的，那么就直接分配，如果不够，则进行一次MGC，如果又不够看survivor区能不能容纳，如果能就移动部分内存到survivor区。如果又不够，就看old区。再不行就只能full gc了。
+
+担保分配策略：
+当发现进行MGC的时候，old区已经不够存储新生代的所有对象了。要进行full GC；开启担保策略的话就可以检查平均晋升的大小，与old区进行对比。
+
 ### 对象的构成
 
 #### 对象头
