--- a/docs/022.jvm/0013.垃圾回收/00011.可达性分析(GC Roots).md
+++ b/docs/022.jvm/0013.垃圾回收/00011.可达性分析(GC Roots).md
@@ -4,6 +4,8 @@
 ## GC Roots
 首先要确定一系列的根对象作为起始节点集，从这个GC Roots去向下搜索，搜索过程称之为引用链（Reference chain），如果某个对象与GC Roots间没有任何引用链相连，即可称之为不可达，则证明对象不再被使用。
 
+这是一组活跃的指针
+
 ## Java中的GC Roots
 1. 虚拟机栈（栈帧中的本地变量表）中引用的对象，譬如各个线程被调用方法堆栈中使用的参数、局部变量、临时变量
 2. **方法区中类静态属性引用的对象，譬如Java类的引用类型静态变量**。
