--- a/docs/013.datastructure/0010.数组/00012.排序/00020.快速选择（第K个数）.md
+++ b/docs/013.datastructure/0010.数组/00012.排序/00020.快速选择（第K个数）.md
@@ -3,25 +3,36 @@
 快速选择算法是快速排序的优化版本，由于在快排中途分治的时候，可以判断第k个数在哪个区间里面，可以对此进行优化
 
 ```java
-    private int quickSelect(int[] arr, int l, int r, int k) {
-        if (l >= r) {
-            return q[l];
+import java.util.*;
+class Main {
+    public static void main(String args[]) {
+        Scanner sc = new Scanner(System.in);
+        int n = sc.nextInt();
+        int k = sc.nextInt();
+        int[] a = new int[n];
+        for (int i = 0; i < n; i ++) {
+            a[i] = sc.nextInt();
         }
-        int i = l - 1, j = r + 1, x = arr[l];
+        quickSort(a, 0, n - 1);
+        System.out.print(a[k - 1]);
+    }
+    
+    private static void quickSort(int[] a, int left, int right) {
+        if (left >= right) {
+            return;
+        }
+        int i = left - 1, j = right + 1, x = a[left];
         while (i < j) {
-            do i ++; while (arr[i] < x);
-            do j --; while (arr[j] > x);
+            do i ++; while (a[i] < x);
+            do j --; while (a[j] > x);
             if (i < j) {
-                int temp = arr[i];
-                arr[i] = arr[j];
-                arr[j] = temp;
+                int temp = a[i];
+                a[i] = a[j];
+                a[j] = temp;
             }
         }
-        if (j - l + 1 >= k) {
-            quickSort(arr, l, j, k);
-        } else {
-            quickSort(arr, j + 1, r, k - (j - l + 1));
-        }
-        
+        quickSort(a, left, j);
+        quickSort(a, j + 1, right);
     }
+}
 ```
