--- a/docs/070.netty/0010.Netty基础/00015.零拷贝基础.md
+++ b/docs/070.netty/0010.Netty基础/00015.零拷贝基础.md
@@ -22,4 +22,4 @@ sendfile只有一次系统调用
 
 ## sendfile + SGDMA
 彻底的零拷贝，有SGDMA的话，就可以不用在内核态再拷贝了。
-![image](./sendfile%2BSGDMA.png)
+![image](./sendfile_SGDMA.png)
