--- a/docs/022.jvm/0011.类加载/00011.类加载全过程-连接.md
+++ b/docs/022.jvm/0011.类加载/00011.类加载全过程-连接.md
@@ -8,7 +8,7 @@
 ### 元数据验证
 
 ### 字节码验证
-字节码验证就是验证一下Code属性，Code属性中有jvm要执行的字节码，那么它到底会不会错呢？这个需要验证一下。同时javac编译的时候也会进行一些辅助验证的。
+字节码验证就是验证一下方法表中的Code属性，Code属性中有jvm要执行的字节码，那么它到底会不会错呢？这个需要验证一下。同时javac编译的时候也会进行一些辅助验证的。
 
 ### 符号引用验证
 这个是发生在解析阶段，进行三个步骤去确保符号引用向直接引用转换的解析阶段可以顺利完成。
