--- a/docs/022.jvm/0013.垃圾回收/00013.不可达=回收？.md
+++ b/docs/022.jvm/0013.垃圾回收/00013.不可达=回收？.md
@@ -4,7 +4,7 @@
 
 当第一次发现不可达以后，会进行第一次标记，随后进行筛选（筛选的条件是此对象是否有必要执行finalize()方法）
 
-如果对象没有覆盖finalize()方法或者已经被掉用过了，就没有必要执行finalize()方法。
+如果对象没有覆盖finalize()方法（直接回收）或者已经被掉用过了，就没有必要执行finalize()方法。
 
 ## F-Queue
 如果认定为这个对象有必要执行finalize方法，那么就会加入到一个F-Queue队列当中，并在稍后由一条虚拟机自动建立、低优先级的Finalizer线程去执行这些对象的finalize方法。
