--- a/docs/022.jvm/0011.类加载/00013.类加载器.md
+++ b/docs/022.jvm/0011.类加载/00013.类加载器.md
@@ -17,6 +17,8 @@ Application类加载器负责加载用户类路径下的所有类库，开发者
 ## 3. 破坏双亲委派机制
 破坏双亲委派机制其实很简单，就是自定义loadClass方法，把它自己的双亲委派的方式改掉就好了。而目前为了防止这种行为，推荐的是使用findClass这个对外提供的方法接口，这样可以自定义的去实现类加载方式但不破坏双亲委派机制。
 
+
 ## 什么时候需要自定义类加载器
 1. 有些公司它为了安全考虑，对class文件进行了一次加密，正常的类加载器是无法解析的，要自定义类加载器去先做解密。
 2. 一些从网络中、zip文件中、db存储中获取class的方式，就需要特殊的类加载器。
+3. tomcat干过，它不同的war包使用到了不同的版本的class，那么如果按原有的双亲委派就会只有一个版本的class，这样子就肯定会有一个war包会问题。
