--- a/docs/022.jvm/0012.运行时数据区/00011.堆.md
+++ b/docs/022.jvm/0012.运行时数据区/00011.堆.md
@@ -2,7 +2,7 @@
 Java堆是虚拟机管理的内存中最大的一块，并且被所有线程共享。
 
 ## 几乎所有实例都在Java堆中
-所有的对象实例和数组理应在Java堆中分配。但是现在发展过程中，现在有迹象表明可能会出现值类型的支持。栈上分配和标量替换使得这个问题不那么肯定了。
+所有的对象实例和数组理应在Java堆中分配。但是现在发展过程中，现在有迹象表明可能会出现值类型的支持。栈上分配和标量替换使得这个问题不那么肯定了（逃逸分析后，如果一个对象是不会影响其他地方，那么就会发生栈上分配，同时不会生成这个对象，而是标量替换成多个变量）。
 
 话术：新创建的对象都在Java堆中。如果提到例外就是栈上分配和标量替换。
 
