--- a/docs/022.jvm/0013.垃圾回收/00025.内存分配策略.md
+++ b/docs/022.jvm/0013.垃圾回收/00025.内存分配策略.md
@@ -2,7 +2,7 @@
 
 1. **新对象进入新生代（大对象可以直接进入老年代）**
 2. 长期存在的对象应该进入老年代（15岁了以后进入老年代） -MaxTenurningThreshold
-3. 如果相同年龄的对象占据了survivor区的一半以上，那么这个年龄的对象可以直接进入老年代。
+3. 如果相同年龄的对象占据了survivor区的一半以上，那么这个年龄的对象可以直接进入老年代。这个机制可能会导致老年代有过多的对象，从而full gc。
 
 ## 空间分配担保策略
 
