--- a/docs/022.jvm/0013.垃圾回收/00023.CMS（老年代收集器）.md
+++ b/docs/022.jvm/0013.垃圾回收/00023.CMS（老年代收集器）.md
@@ -1,4 +1,4 @@
-# CMS老年代收集器
+# CMS(Concurrent Mark Sweep)老年代收集器
 
 只有CMS基于标记清除算法！缺点就是空间的碎片化。
 
@@ -16,4 +16,9 @@
 
 1. CMS对处理器资源非常敏感，由于要占用线程进行垃圾收集，如果CPU核少，那么就会导致吞吐量低。他要占用（处理器核+3）/ 4个线程。如果核心数少于4那么就要考虑Serial Old。
 
-2. CMS 无法处理浮动垃圾（区别于碎片空间）。浮动垃圾就是漏网之鱼，就是用户线程并发运行的时候产生的新垃圾是无法在本次的垃圾收集解决的。 当老年代预留的空间无法支持新对象的需求，就会引发“Concurrent Mode Fail”，出现就必须要引出Serial Old收集器进行收集。
+2. CMS 无法处理浮动垃圾（区别于碎片空间）。浮动垃圾就是漏网之鱼，就是用户线程并发运行的时候产生的新垃圾是无法在本次的垃圾收集解决的。 当老年代预留的空间无法支持新对象的需求,当前的垃圾回收还没处理完，又出现一次垃圾回收，就会引发“Concurrent Mode Fail”，出现就必须stw，要引出Serial Old收集器进行收集。
+
+## 如何避免Concurrent Mode Fail
+可以设置多少次FullGC以后进行压缩，默认是0，也就是每次Full GC以后都会压缩。
+
+设置老年代达到多少以后进行FullGC,默认是92%，这样就默认留了一些空间给大对象的分配。
