--- a/docs/013.datastructure/0015.Trie/00010.位运算的Trie树/00011.1803. 统计异或值在范围内的数对有多少.md
+++ b/docs/013.datastructure/0015.Trie/00010.位运算的Trie树/00011.1803. 统计异或值在范围内的数对有多少.md
@@ -7,7 +7,7 @@ class Solution {
         int res = 0;
         for (int i = 1; i < nums.length; i ++) {
             trie.insert(nums[i - 1]);
-           // System.out.println(trie.get(high, nums[i]) - trie.get(low, nums[i]));
+            //System.out.println(trie.get(high, nums[i]) - trie.get(low - 1, nums[i]));
             res += trie.get(high, nums[i]) - trie.get(low - 1, nums[i]);
         }
         return res;
@@ -28,35 +28,36 @@ class Solution {
             }
         }
         
+        /**
+        * num是要保持的范围，x是当前的数
+        */
+        
         public int get(int num, int x) {
-            Node t = root;
+            Node cur = root;
             int sum = 0;
-            // 这里的目的是保持x遍历的值始终和num相等
             for (int i = 30; i >= 0; i --) {
-                int u = (x >> i) & 1, z = (num >> i) & 1;
-                // 如果num的部分是0，那么希望这个异或的结果也是0，不能超过它
-                if (z == 0) {
-                    // 所以要异或它本身，如果本身的异或为null，那可以直接返回了，无法往下进行。
-                    if (t.son[u] == null) {
+                int type1 = (num >> i) & 1, type2 = (x >> i) & 1;
+                // 此时判断一下，如果说我们需要的数，type1为0，我们肯定不能超越他.
+                if (type1 == 0) {
+                    if (cur.son[type2] == null) {
                         return sum;
+                    } else {
+                        cur = cur.son[type2];
                     }
-                    t = t.son[u];
-                // 如果num部分是1，那么我们异或的结果为0的部分就可以全部返回了。异或结果为1的部分继续往下遍历。
                 } else {
-                    // 异或结果为0的部分不可能大于num了，所以可以直接累加
-                    if (t.son[u] != null) {
-                        sum += t.son[u].cnt;
+                    // 因为选0了，就永远不能比它大了，所以后面的都要加上
+                    if (cur.son[type2] != null) {
+                        sum += cur.son[type2].cnt;
                     }
-                    // 如果不能往下遍历就返回结果
-                    if (t.son[u ^ 1] == null) {
+                    // 如果是空，也走不下去
+                    if (cur.son[1 - type2] != null) {   
+                        cur = cur.son[1 - type2];
+                    } else {
                         return sum;
                     }
-                    // 往下遍历
-                    t = t.son[u ^ 1];
                 }
             }
-            // 别忘了最后要累加结果，因为遍历到叶子结点了还没往下进行累加。
-            sum += t.cnt;
+            sum += cur.cnt;
             return sum;
         }
     }
