--- a/docs/041.redis/0022.Redis集群/00010.主从复制.md
+++ b/docs/041.redis/0022.Redis集群/00010.主从复制.md
@@ -28,6 +28,11 @@ replicaof ip port
 首先，从节点之中会有主节点的run-id,同时有自己的偏移量。在重连以后会发送run-id和偏移量。run-id会与master节点进行对比，如果对比成功，会用偏移量与master中的环形存储进行对比，
 如果在其中，就把在sliver和master偏移量之间的数据给发送过去。否则就要进行又一次的全量复制，bgsave。
 
+流程：
+1. 对比run-id，如果还是当前的主节点，那就继续判断，否则直接全量
+2. 对比offset,offset之间的差距有没有超出我们的环形缓冲区的范围。如果没有，就可以把这段给增量发送给sliver。
+3. 否则全量复制。
+
 ### 4.0后的更新psync2.0
 因为如果出现了master节点的切换，上述2.8版本后的这样对比run-id的方式就失效了，仍然会进行全量复制。
 
@@ -38,3 +43,8 @@ RDB的二进制压缩方式数独快，占用空间小。
 
 ## 主从复制方案有什么痛点
 痛点就在于如果master挂了以后的处理方式，如果一个master挂掉了，需要人手工上去换master节点，同时更改sliver的master节点。
+
+### 缺点
+1. 内存瓶颈，由于主从节点都是一样的数据，那么会导致一定程度的内存的浪费。以后进行扩容的时候就很麻烦。
+2. 只有一个master节点能写，吞吐量低。
+3. 由集群去解决。
