--- a/docs/041.redis/0024.实战/00010.分布式锁.md
+++ b/docs/041.redis/0024.实战/00010.分布式锁.md
@@ -32,3 +32,19 @@ redission内部是用lua脚本来实现的,lua是有原子性的。
 
 ### 红锁的问题
 红锁对应的节点要是不采取主从模式，如果挂掉了就可能出现无法加锁，如果有主从那么如果红锁对应的节点挂掉了，那么同样会面临上述的问题。
+
+## 分布式锁流程
+
+1. 加锁
+2. 业务
+3. 解锁
+
+### 自定义一个组件
+1. 定义lock注解（value锁的key，默认过期时间）
+2. 开发一个aop的切面类，拦截这个方法，在这个方法前后封装加锁和解锁的逻辑
+
+### 客户端使用
+1. redis+lua
+2. jedis
+3. lettuce
+4. redisson
