--- a/docs/040.mysql45/0010.基础部分/0020.02-日志系统.md
+++ b/docs/040.mysql45/0010.基础部分/0020.02-日志系统.md
@@ -20,7 +20,7 @@ binlog：在Mysql服务端级别记录了执行语句。
 
 ### WAL
 
-WAL的思想给许许多多的系统的效率提供了很大的提升。具体的就是，在写入之前先记日志，优化的核心就在于随机IO的消除。如果没有WAL，我们刷新的时候要在众多页里面去找到要刷新的页，这时候就会产生许多的随机IO，而这样连续写的日志则可以很大程度的优化。
+WAL的思想给许许多多的系统的效率提供了很大的提升。具体的就是，在写入之前先记日志，优化的核心就在于随机IO的消除。将多次的磁盘IO，合并成一次的日志一起写入。
 
 ## 细说redo log
 
