--- a/docs/017.go/0010.基础/00011.go基本语法.md
+++ b/docs/017.go/0010.基础/00011.go基本语法.md
@@ -158,3 +158,57 @@ func convertToBin(u int) string {
 
 // go语言里面没有while 都用for来执行 啥都不写就是一个死循环
 ```
+
+## 函数
+```go
+func eval(a, b int, op string) int {
+    switch op {
+    case "+":
+        return a + b
+    case "-":
+        return a - b
+    case "*":
+        return a * b
+    case "/":
+        return a / b
+    default:
+        panic("unsupported operation:" + op)            
+    }
+}
+
+// 可以在函数的返回添加一个err，方面外层去判断有没有错
+// fmt.Errorf
+func div(a, b int) (int, int) {
+    return a / b, a % b
+}
+
+func apply(op func(int, int) int, a, b, int) int {
+    return op(a, b)
+}
+
+// 这种方法太长了不好识别
+func div(a, b int) (q, r int) {
+    q = a / b
+    r = a % b
+    return
+}
+
+// 这里是一个可变列表的参数
+func sum(nums ...int) int {
+    s := 0
+    // range去遍历一个列表
+    for i:= range nums {
+        s += nums[i]
+    }
+}
+```
+
+## go语言的指针
+
+- 指针不能进行运算的
+var a = 2
+aa := &a
+*aa = 3
+- 值传递
+- 交换两个变量的值
+b, a = a, b
