--- a/docs/017.go/0010.基础/00011.go基本语法.md
+++ b/docs/017.go/0010.基础/00011.go基本语法.md
@@ -157,7 +157,19 @@ func convertToBin(u int) string {
 }
 
 // go语言里面没有while 都用for来执行 啥都不写就是一个死循环
+
+// for 循环由这三部分组成
+for initialization; condition; post {
+
+}
 ```
+
+
+- initialization表示一些简单初始化语句，是可选的
+- condition是一个布尔表达式，如果为true就是执行循环体语句，可选
+- post是在循环体执行完了以后执行的，可选
+
+这三部分都可以被省略掉
 
 ## 函数
 ```go
