--- a/docs/017.go/0010.基础/00012.数组容器切片.md
+++ b/docs/017.go/0010.基础/00012.数组容器切片.md
@@ -26,7 +26,8 @@ for _, v := range arr3 {
 ```
 
 - 为什么要用range：美观，简洁，意图明显
-
+- 数组中的元素是可以直接比较的，会直接比较值是否全部相等
+- 可以通过消息摘要去判断相同
 
 ### 数组是值类型-它是个拷贝
 
@@ -150,3 +151,15 @@ func main() {
 - ToLower, ToUpper
 - Trim, TrimRight, TrimLeft
 
+### printf的verb
+
+%d          十进制整数
+%x, %o, %b  十六进制，八进制，二进制整数。
+%f, %g, %e  浮点数： 3.141593 3.141592653589793 3.141593e+00
+%t          布尔：true或false
+%c          字符（rune） (Unicode码点)
+%s          字符串
+%q          带双引号的字符串"abc"或带单引号的字符'c'
+%v          变量的自然形式（natural format）
+%T          变量的类型
+%%          字面上的百分号标志（无操作数）
