--- a/docs/017.go/0030.go语言圣经/00015.5-1函数声明.md
+++ b/docs/017.go/0030.go语言圣经/00015.5-1函数声明.md
@@ -153,3 +153,15 @@ func Parse(input string) (s *Syntax, err error) {
 ```
 
 ## 不写return却能返回值
+
+```go
+func test() (res int) {
+	defer func() {
+		if p := recover(); p != nil {
+			res = 1
+			fmt.Println(p)
+		}
+	}()
+	panic(new(struct{}))
+}
+```
