--- a/docs/060.configs/0012.zookeeper.md
+++ b/docs/060.configs/0012.zookeeper.md
@@ -1,11 +1,20 @@
-# Docker安装zookeeper
+# Docker安装zookeeper和Kafka
 之前我是在windows本地安装了zookeeper和kafka，现在想着自己再玩一玩docker，记录一下docker如何安装zookeeper
 ```
 # 拉取zk
-docker pull zookeeper:3.4.13
+docker pull zookeeper
+
+# 设置网络
+docker network create app-tier --driver bridge
 
 # 因为就做学习用，就不映射空间了
-docker run --name zookeeper -p 2181:2181 --restart always -d zookeeper:3.4.13
+docker run -d --name zookeeper --network app-tier -p 2181:2181 -t zookeeper
+
+# kafka
+docker pull wurstmeister/kafka
+
+docker run -d --name kafka --network app-tier -p 9092:9092 -e KAFKA_BROKER_ID=0 -e KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181 -e KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092 -e KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092 wurstmeister/kafka
+
 ```
 *没有任何意外，成功跑起来了*
 ![image](./zookeeper.png)
