--- a/docs/017.go/0010.基础/00013.结构体和方法.md
+++ b/docs/017.go/0010.基础/00013.结构体和方法.md
@@ -36,6 +36,9 @@ func newTreeNode(int val) *TreeNode{
 而go里面会对逃逸进行分析优化，把这种可能出现问题的情况，分配到堆中，这也就不会出现内存泄露了。
 
 ### 方法
+
+go函数名一定是和左花括号在一起的
+
 ```go
 func (root TreeNode) print() {
     fmt.Println(root.val)
