--- a/docs/017.go/0070.深度探究go语言/00014.goroutine.md
+++ b/docs/017.go/0070.深度探究go语言/00014.goroutine.md
@@ -155,8 +155,8 @@ golang对协程的处理：
    - 如果局部队列已经满了，那么就会往全局队列中添加
 4. M执行G
    - M尝试从从P中获取G，P首先访问本地队列
-   - 再尝试stealing
-   - stealing失败后从全局队列中获取
+   - 再尝试全局队列中获取
+   - stealing
 5. 调度执行
    - 顺利执行，释放时间片，再去循环调度执行
    - 被阻塞，就触发了hand off机制，会尝试将P的本地队列交由休眠/空闲的M来接管，如果没有就创建新的M
