--- a/docs/017.go/0070.深度探究go语言/00014.goroutine.md
+++ b/docs/017.go/0070.深度探究go语言/00014.goroutine.md
@@ -31,6 +31,9 @@
 
 所以考虑一个更轻量级的设计-**协程**
 
+### 协程的关键
+每个协程有自己的操作栈，可以让出执行权，保存现场和恢复现场
+
 ## 线程的切分
 
 ### 原始状态
@@ -171,6 +174,7 @@ golang对协程的处理：
 3. 负责执行初始化操作和启动第一个G0
 4. 启动第一个G以后，M0就和其他的M一样了
 5. 主要做初始化工作
+6. 后续回执行main.main这个goroutine
 
 #### G0
 1. 每次启动一个M，都会第一个创建的G，就是G0
