update image load

--- a/docs/017.go/0030.go语言圣经/00018.7-1接口.md
+++ b/docs/017.go/0030.go语言圣经/00018.7-1接口.md
@@ -61,12 +61,12 @@ var any interface{}
 1. 接口类型
 2. 那个类型的值
 
-![img.png](img.png)
+![img.png](./img.png)
 
 ### 指针
-![img_1.png](img_1.png)
+![img_1.png](./img_1.png)
 ### 值
-![img_2.png](img_2.png)
+![img_2.png](./img_2.png)
 
 
 ## nil指针的接口
