--- a/docs/017.go/0060.golang设计模式/创造型模式/00010.简单工厂.md
+++ b/docs/017.go/0060.golang设计模式/创造型模式/00010.简单工厂.md
@@ -6,9 +6,9 @@
 3. 再根据迪米特法则，一个类依赖的其他类越少越好，用工厂去衔接其他类，让逻辑编排类轻松写
 所以在中间引入一个简单工厂去解决这个问题
 
-![img.png](img.png)
+![img.png](./img.png)
 
-![img_1.png](img_1.png)
+![img_1.png](./img_1.png)
 
 ## 优缺点
 
