--- a/docs/017.go/0060.golang设计模式/创造型模式/00012.抽象工厂方法模式.md
+++ b/docs/017.go/0060.golang设计模式/创造型模式/00012.抽象工厂方法模式.md
@@ -4,14 +4,14 @@
 
 把产品分为两个象限，产品族和产品等级结构
 
-![img_5.png](img_5.png)
+![img_5.png](./img_5.png)
 
 **把产品从产品族维度划分**
 
 1. 因为产品族可能早就被确定了，比如一台电脑有的内部部件是确定的
 2. 但是不同的品牌是不确定的，可新增的，所以把产品以这个维度划分比较合适
 
-![img_6.png](img_6.png)
+![img_6.png](./img_6.png)
 
 ## 优缺点
 
