--- a/docs/017.go/0060.golang设计模式/结构型模式/00010.代理模式.md
+++ b/docs/017.go/0060.golang设计模式/结构型模式/00010.代理模式.md
@@ -1,10 +1,10 @@
 # 代理模式
 
 代理：找别人帮自己做一件事，在完成本身需求之外完成额外的事
-![img.png](img.png)
+![img.png](./img.png)
 
 ## 具体案例
-![img_1.png](img_1.png)
+![img_1.png](./img_1.png)
 
 ## 加强版案例
 ```go
