--- a/docs/017.go/0060.golang设计模式/结构型模式/00011.装饰器模式.md
+++ b/docs/017.go/0060.golang设计模式/结构型模式/00011.装饰器模式.md
@@ -1,10 +1,10 @@
 # 装饰器模式
 
 一个类，通过装饰器，变成一个新的类
-![img_2.png](img_2.png)
+![img_2.png](./img_2.png)
 
 ## 案例
-![img_3.png](img_3.png)
+![img_3.png](./img_3.png)
 
 ## 特点
 和代理模式及其相似，装饰类（代理类）去实现原对象需要实现的方法，并且内嵌原对象
