--- a/docs/017.go/0060.golang设计模式/行为型模式/00011.命令模式.md
+++ b/docs/017.go/0060.golang设计模式/行为型模式/00011.命令模式.md
@@ -1,8 +1,8 @@
 # 命令模式
 
-![img.png](img.png)
+![img.png](./img.png)
 
-![img_1.png](img_1.png)
+![img_1.png](./img_1.png)
 
 ## 个人理解
 命令模式像是把指令（需求）和具体执行者给拆开的这么一个设计。
