--- a/docs/017.go/0070.深度探究go语言/00014.goroutine.md
+++ b/docs/017.go/0070.深度探究go语言/00014.goroutine.md
@@ -38,16 +38,16 @@
 
 ### 原始状态
 操作系统将一个线程分成了，用户空间和内核空间
-![img_1.png](img_1.png)
+![image](./img_1.png)
 
 ### 切分线程
 如此切分，操作系统的视野中，线程并没有什么改变，代码不需要更改，而是多出一个用户线程部分，绑定住了内核线程。
 
-![img_2.png](img_2.png)
+![image](./img_2.png)
 
 ### 演变协程
 根据上述的切分，那么就可以演变成n比1的对应关系。
-![img_3.png](img_3.png)
+![image](./img_3.png)
 
 ### 问题
 1. 当多个协程绑定一个内核的线程，那么就会出现阻塞，一个协程占有住了线程，那么其他的就需要等待。
@@ -55,7 +55,7 @@
 
 ### 再次演变 m:n
 再演变之中，用m:n的对应来解决阻塞，同时协程调度器的逻辑就更加重要了。
-![img_4.png](img_4.png)
+![image](./img_4.png)
 
 ### 纤程
 
@@ -91,7 +91,7 @@ golang对协程的处理：
 2. 轻松切换，切换成本低。
 ### GM
 通过锁，让M去G队列中获取任务，执行完了再放回G的队列
-![img_5.png](img_5.png)
+![image](./img_5.png)
 
 #### GM的问题
 1. 创建，销毁，调度G，都需要用到锁，而用到锁就会导致锁的竞争
@@ -106,7 +106,7 @@ golang对协程的处理：
 2. P: processor处理器，处理G
 3. M: Machine, thread线程
 
-![img_6.png](img_6.png)
+![image](./img_6.png)
 
 一个程序中，能够最大并行的go的数量是GOMAXPROCS个，也就是P的数量
 
@@ -130,16 +130,14 @@ golang对协程的处理：
 
 ##### hand off机制
 当一个G在P中阻塞住了，P的本地队列都hang住了，这时候就会新创建/唤醒一个thread，把之后的P的本地队列接管
-![img_7.png](img_7.png)
-
-
+![image](./img_7.png)
 1. work stealing：当本地无可用的G的时候，不会将G给销毁，而是尝试去帮别人做
 2. hand off：当我本地阻塞的时候，不要坐以待毙，把本地队列交给空闲的人去做
 #### 2. 利用并行
 可以指定占用CPU个数（P的个数），合理的分配CPU
 
 #### 3. 抢占
-![img_8.png](img_8.png)
+![image](./img_8.png)
 1. 在之前的模式中，一个协程要等另一个协程执行完毕释放CPU才行。
 2. 在goroutine的模式中，设置一个最长10ms的等待，如果没有释放CPU，那么就会进行抢占
 #### 4. 全局G队列
@@ -150,7 +148,7 @@ golang对协程的处理：
 1. 当一个P空闲的时候，首先会从其他队列中stealing
 2. 再尝试从全局队列中去获取
 ### 3. go func()经历了什么
-![img_10.png](img_10.png)
+![image](./img_10.png)
 1. 执行 go func()
 2. 创建一个G
 3. 加入局部队列
@@ -184,7 +182,7 @@ golang对协程的处理：
 5. 在调度或系统调用时，M会先切换到G0，再去调度其他的G
 6. M0的G0也是放在全局空间
 
-![img_9.png](img_9.png)
+![img_9.png](./img_9.png)
 ### 5. 可视化的GMP编程
 
 #### 基本的trace编程
@@ -195,14 +193,14 @@ golang对协程的处理：
 4. 通过go build 并且运行，会得到一个trace.out文件
 5. go tool trace工具打开trace文件
 
-![img_11.png](img_11.png)
+![image](./img_11.png)
 
 #### 通过Debug trace调试
 
 设置GODEBUG=schedtrace=1000 ./可执行程序
 
 这是每隔1000ms执行一次
-![img_12.png](img_12.png)
+![image](./img_12.png)
 
 ##### 具体分析
 - SCHED:调试的信息 
