--- a/docs/017.go/0070.深度探究go语言/00015.goroutine案例分析.md
+++ b/docs/017.go/0070.深度探究go语言/00015.goroutine案例分析.md
@@ -2,10 +2,10 @@
 
 ## 场景1: G1创建G3
 
-![img_13.png](img_13.png)
+![image](./img_13.png)
 
 ## 场景2: G2执行完毕
-![img_14.png](img_14.png)
+![image](./img_14.png)
 
 ## 场景3，4，5: 连续创建多个G 导致本地队列满
 
@@ -21,7 +21,7 @@
 每次创建一个新G的时候，都会尝试在休眠M队列中唤醒一个M。此时M就会成为一个自旋线程，去寻找一个能够执行的G。
 （stealing 或者 全局队列）
 
-![img_15.png](img_15.png)
+![image](./img_15.png)
 
 ## 场景7 被唤醒的M从全局队列中取G
 
