--- a/docs/017.go/0060.golang设计模式/创造型模式/00011.工厂方法模式.md
+++ b/docs/017.go/0060.golang设计模式/创造型模式/00011.工厂方法模式.md
@@ -1,12 +1,12 @@
 # 工厂方法模式
 
 ## 模型
-![img_2.png](img_2.png)
+![img_2.png](./img_2.png)
 
 ## 对比
 1. 相较于简单工厂模式，它由于把工厂提取出来了，解决了简单工厂模式未实现的开闭原则
 2. 当需要新增方法的时候，只需要新增工厂即可，不用修改原来的代码
-![img_3.png](img_3.png)
+![img_3.png](./img_3.png)
 
 
 ## 优缺点
