update image load

--- a/docs/017.go/0070.深度探究go语言/00014.goroutine.md
+++ b/docs/017.go/0070.深度探究go语言/00014.goroutine.md
@@ -17,7 +17,7 @@
 
 这就是非常经典的轮询调度，由时间片来控制每个进程是否结束
 
-![img.png](img.png)
+![img.png](./img.png)
 
 ### 切换成本
 在上下文切换的时候，就会有拷贝和复制，CPU也会去工作，那么会对CPU有一种浪费。
