--- a/docs/017.go/0070.深度探究go语言/00019.go内存管理.md
+++ b/docs/017.go/0070.深度探究go语言/00019.go内存管理.md
@@ -32,7 +32,7 @@
 
 ### 存储单元
 1. page: 最小的存储单元
-Golang借鉴了分页管理思想，每个最小的存储单元页叫做页，但大小为8kb
+Golang借鉴了分页管理思想，每个最小的存储单元页叫做页，但大小为8KB
 2. mspan: 最小的管理单元
 mspan大小为page的整数倍，且从8B到80KB被划分为67种不同的规格，分配对象时，会根据大小映射到不同规格的mspan，从中获取空间
 优势：
@@ -148,5 +148,98 @@ type mspan struct {
 }
 ```
 
-重要参数:
-1. 
+mspan重要参数:
+1. 左右两个链表节点
+2. mspan等级->对应有page数量，对象个数
+3. 当前占用情况的bitmap
+4. freeIndex，从这个index后开始遍历
+5. mspan的初始地址
+
+## mspan的等级
+mspan以页基本单位，最小为8，最大为32768，总共67个等级，以及一个隐藏的0级，总共68个等级
+
+数据存放在runtime/sizeclasses.go
+![img_16.png](./img_16.png)
+
+spanClass是一个uint8的8位数字，前7位用来表示等级，后1位来表示是否位noscan的标识位。
+
+提供了两类span，一种分配含指针的对象，一种分配不含指针的对象，意思是如果不含指针对象，那么就不用进一步进行GC扫描
+
+## mcache
+
+1. mcache是每个P独有的缓存，因此交互无锁，那么就回优先从此处获取
+2. mcache将每种spanClass等级的mspan缓存两份，之前已经提过了
+3. mcache还有一个对象分配器tiny allocator，用于处理小于16B对象的内存空间
+
+```go
+const numSpanClasses = 136 // 68 * 2(含指针和不含指针)
+type mcache struct {
+	// 微小对象分配
+	tiny uintptr
+	tinyoffset uintptr
+	tinyAllocs uintptr
+	
+	// mcache中缓存的mspan，每种spanClass各一个
+	alloc [numSpanClasses]*mspan // 提前分配，以空间换时间，用时不用再创建
+}
+```
+
+## mcentral
+
+1. 每个mcentral对应了一种spanClass
+2. 每个mcentral下聚合了该spanClass下的mspan
+3. mcentral的mspan分为两个链表，分别为有空就mspan链表partial和满空间mspan链表full
+4. 每个mcentral各有一把锁
+
+```go
+type mcentral struct {
+	// 对应的spanClass
+	spanClass spanClasss
+	// 有空位的mspan集合, 两个，一个用于抗GC
+	partial [2]spanSet
+	// 无空位的mspan集合
+	full [2]spanSet
+}
+```
+
+## mheap
+- 对于Golang上层应用而言，堆是操作系统虚拟内存的抽象
+- 以页（8KB）为单位，作为最小内存存储单元
+- 负责将连续页组装成mspan
+- 全局内存基于bitmap标识其使用情况，每个bit对应一页，0则free，1则被占用
+- 通过heapArena聚合页，记录了页刀mspan的映射信息你
+- 建立空闲页基数树索引radix tree index,辅助快速寻找空闲页
+- 是mcentral的持有者，持有所有spanClass下的mcentral，作为自身的缓存
+- 内存不够的时候，向操作系统申请，申请单位为heapArena(64M)
+
+```go
+
+type mheap struct {
+	// 堆的全局锁
+	lock mutex
+	
+	// 空闲页分配器, 底层是多颗基数树组成的索引， 每棵树对应16GB内存空间
+	pages pageAlloc
+	
+	// 记录了所有的mspan, 所有的mspan都是经由mheap，使用连续的空闲页组装
+	allspans []*mspan
+	
+	// heapAreana数组
+	arenas [1 << arenaL1Bits] * [1 << arenaL2Bits] * heapArena
+	
+	// ...
+	// 多个mcentral， 总个数为spanClass的个数
+	// numSpanClass-> 68 * 2 = 136
+	central [numSpanClasses] struct {
+		mcentral mcentral
+		// 对齐
+		pad
+	}
+	
+	//...
+}
+```
+
+## 页索引&heapArena
+底层为一个基数树，辅助来空闲页分配
+
