--- a/docs/017.go/0010.基础/00011.go基本语法.md
+++ b/docs/017.go/0010.基础/00011.go基本语法.md
@@ -20,7 +20,7 @@ func variableZeroValue() {
     var a int // 变量都会有默认的值
     var s string
     fmt.println(a, s)
-}
+}r
 
 func variableInitialValue() {
     var a, b int = 3, 4 // 可以赋初值，可以多个一起赋值
@@ -35,21 +35,23 @@ func variableTypeDeduction() {
 }
 
 func variableShorter() {
-    a, b, c := 3, true, "def" // := 和var效果一样, 最好都用:=
+    a, b, c := 3, true, "def" // := 和var效果一样, 最好都用:=, 简单易懂
 }
 ```
 
 ## 内建变量类型
 - bool, string
 - (u)int, (u)int8, (u)int16, (u)int64, uintptr(指针)
-- byte(8位), rune(字符型-类似于char，由于一字节的char有坑，所以用到了rune，长度32位),对于整数就是一个别名
-- float32, float64, complex64, complex128(complex是负数， 有实部和虚部，各占一半)
+- byte(8位), rune(字符型-类似于char，由于一字节的char有坑（某些字符占位大于1字节后会导致语义错误），所以用到了rune，长度32位),对于整数就是一个别名
+- float32, float64, complex64, complex128(complex是复数， 有实部和虚部，各占一半)
 
 ### 强制类型转化
+可以通过unsafe.Pointer去对指针指向的数据类型进行改变，这是效率最高的，但是不安全
+
 ```go
 func triangle() {
   var a int = 3
-  b := float64(a)
+  b := float64(a) // 直接的转化
 }
 ```
 
