--- a/docs/017.go/0070.深度探究go语言/00019.go内存管理.md
+++ b/docs/017.go/0070.深度探究go语言/00019.go内存管理.md
@@ -243,3 +243,54 @@ type mheap struct {
 ## 页索引&heapArena
 底层为一个基数树，辅助来空闲页分配
 
+基数树，类似于树状数组/线段树，整棵树维护了3个信息：
+1. 最大连续空闲页
+2. 从左开始最大连续空闲页
+3. 从右开始最大连续空闲页
+
+一共有5层，每个父pallocSum一共有8个子pallocSum
+
+最底层是一个chunk 512page，每颗基数树存储16GB内存，一共2^14个基数树，因此覆盖到了256T的内存空间
+
+
+### 16GB怎么算的
+max占位21个，那么最大的页数量为2^21个， 2M *  8KB = 16GB
+
+### 往下如何分
+第一层管理总体的页，总管理空间为16GB，那么由于每个父节点有8个子节点，那么下一层管理的内存要除8
+
+1. 第一层：16GB
+2. 第二层：2GB
+3. 第三层：256MB
+4. 第四层：32MB
+5. 第五层：4MB
+
+那么第五层每个节点管理的只是4MB = (512 * 8KB)，这也被称之为chunk，也就是最基础的节点
+
+
+## 对象分配流程
+
+三类对象：
+- tiny 微小对象 （0，16B）
+- small 小对象 （16B，32KB）
+- large 大对象 （32KB, 正无穷）//超过了spanClass
+
+### 微小对象分配流程
+1. 从P专属mcache的tiny分配器取内存
+2. 根据所属spanClass，从P专属mcache缓存中mspan中取内存(无锁)
+3. 根据所属的spanClass从对应的mcentral中取mspan填充到mcache，然后从mspan中取内存(spanClass粒度锁)
+4. 根据所属的spanClass，从mheap的页分配器pageAlloc取得足够数量空闲页组装成mspan填充到mcache，然后从mspan中取内存(全局锁)
+5. mheap向操作系统申请内存，更新页分配器的索引信息，然后重复（4）
+
+### 小对象分配流程
+
+跳过步骤1，直接进行2-5
+
+### 大对象分配流程
+跳过1-3，直接进行4-5
+
+
+
+
+
+
