--- a/docs/017.go/0080.go扩展库学习/00010.ants.md
+++ b/docs/017.go/0080.go扩展库学习/00010.ants.md
@@ -126,3 +126,99 @@ func (c *Cond) Broadcast() {
 - 一个并发安全的对象池
 - 帮我们创建、管理对象，高效利用对象，不用关心gc
 
+#### 思想
+一个local数组，index为每个P的id，每个P对应一个local对象，其中存放：
+1. private对象，无锁竞争，直接获取
+2. sharedList，存在竞争，需要加锁
+3. victim，抵御一次GC
+
+#### pin方法
+
+因为goroutine的是存在抢占的，那么如果在设定当前P对应的local的时候发生了goroutine的转换，就会有一些意想不到的错误，通过pin方法，让当前的goroutine和P绑定。
+
+当然pin方法肯定要对应一个解绑定的方法
+
+
+#### Get方法
+
+1. pin
+2. 从local的private中获取
+3. 从共享队列中获取
+4. 走getSlow的逻辑，从其他的P中的共享队列获取
+5. 从上轮gc中缓存的victim对象给拿到
+6. unpin
+7. 直接调用初始好的new方法
+
+```go
+func (p *Pool) Get() any {
+    l, pid := p.pin()
+    x := l.private
+    l.private = nil
+    if x == nil {
+        x, _ = l.shared.popHead()
+        if x == nil {
+            x = p.getSlow(pid)
+        }
+    }
+    runtime_procUnpin()
+    if x == nil && p.New != nil {
+        x = p.New()
+    }
+    return x
+}
+```
+
+#### put方法
+
+1. 非空判断
+2. pin
+3. 把private绑定为put进去的东西（没有竞争
+4. 失败就往共享队列里加
+5. unpin
+
+```go
+// Put adds x to the pool.
+func (p *Pool) Put(x any) {
+    if x == nil {
+        return
+    }
+    l, _ := p.pin()
+    if l.private == nil {
+        l.private = x
+    } else {
+        l.shared.pushHead(x)
+    }
+    runtime_procUnpin()
+}
+```
+
+#### pool资源如何回收
+
+```go
+func init() {
+    runtime_registerPoolCleanup(poolCleanup)
+}
+
+func poolCleanup() {
+    for _, p := range oldPools {
+        p.victim = nil
+        p.victimSize = 0
+    }
+
+    for _, p := range allPools {
+        p.victim = p.local
+        p.victimSize = p.localSize
+        p.local = nil
+        p.localSize = 0
+    }
+
+    oldPools, allPools = allPools, nil
+}
+```
+
+- 通过runtime_registerPoolCleanup注册了一个函数，这个函数就相当于一个钩子，在执行gc的时候执行这个函数
+- 每个 Pool 首次执行 Get 方法时，会在内部首次调用 pinSlow 方法内将该 pool 添加到迁居的 allPools 数组中； 
+- 每次 gc 时，会将上一轮的 oldPools 清空，并将本轮 allPools 的元素赋给 oldPools，allPools 置空； 
+- 新置入 oldPools 的元素统一将 local 转移到 victim，并且将 local 置为空. 
+- 综上可以得见，最多两轮 gc，pool 内的对象资源将会全被回收.
+
