--- a/docs/017.go/0070.深度探究go语言/00019.go内存管理.md
+++ b/docs/017.go/0070.深度探究go语言/00019.go内存管理.md
@@ -195,7 +195,7 @@ type mcache struct {
 type mcentral struct {
 	// 对应的spanClass
 	spanClass spanClasss
-	// 有空位的mspan集合, 两个，一个用于抗GC
+	// 有空位的mspan集合, 两个，一个用于抗GC，一个集合是已经扫描的，另一个集合是还没扫描的
 	partial [2]spanSet
 	// 无空位的mspan集合
 	full [2]spanSet
@@ -282,13 +282,14 @@ max占位21个，那么最大的页数量为2^21个， 2M *  8KB = 16GB
 4. 根据所属的spanClass，从mheap的页分配器pageAlloc取得足够数量空闲页组装成mspan填充到mcache，然后从mspan中取内存(全局锁)
 5. mheap向操作系统申请内存，更新页分配器的索引信息，然后重复（4）
 
+![img_25.png](img_25.png)
 ### 小对象分配流程
 
 跳过步骤1，直接进行2-5
-
+![img_26.png](img_26.png)
 ### 大对象分配流程
 跳过1-3，直接进行4-5
-
+![img_27.png](img_27.png)
 
 
 
