--- a/docs/017.go/0010.基础/00012.数组容器切片.md
+++ b/docs/017.go/0010.基础/00012.数组容器切片.md
@@ -4,7 +4,7 @@
 ```go
 var arr1 [5]int // 5个int的数组
 arr2 := [3]int{1, 3, 5} // :=的时候要赋初值
-arr3 := [] // 什么都不写是切片
+arr3 := []int // 什么都不写是切片
 arr4 := [...]int{2, 4, 6, 8, 10}
 
 var grid [4][5]int // 2维数组 4行5列
